// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkylineColor overview 1`] = `
<DocumentFragment>
  <table
    class="css-1ea51ic-TableRowContainer"
  >
    <tbody>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Gray 600
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-gray(600)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-1u81vgs-BaseSkylineColor"
            >
              <div>
                #757575
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`SkylineColor palette 1`] = `
<DocumentFragment>
  <table
    class="css-5x8c9x-SkylineColorPalette"
  >
    <colgroup>
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
      <col
        span="1"
      />
    </colgroup>
    <thead>
      <tr>
        <th
          class="css-hv87u9"
        >
          Name
        </th>
        <th
          class="css-hv87u9"
        >
          Use on White
        </th>
        <th
          class="css-hv87u9"
        >
          Use on Gray 200
        </th>
        <th
          class="css-cguqnl"
        >
          Scss
        </th>
        <th
          class="css-hv87u9"
        >
          Example
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Green
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-hue(green)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-yuvx8p-BaseSkylineColor"
            >
              <div>
                #1a801b
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Green Light
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-hue(green, light)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-1c49loi-BaseSkylineColor"
            >
              <div>
                #f4fce3
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Yellow
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-hue(yellow)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-57qzsq-BaseSkylineColor"
            >
              <div>
                #fcc419
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Yellow Light
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-hue(yellow, light)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-fylszp-BaseSkylineColor"
            >
              <div>
                #fff9db
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Gray 500
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-gray(500)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-nx8r5n-BaseSkylineColor"
            >
              <div>
                #8b8b8b
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Gray 600
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-us6iq0-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-13mn4dv-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              No
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-gray(600)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-1u81vgs-BaseSkylineColor"
            >
              <div>
                #757575
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr>
        <td>
          <div
            class="css-ebzktk-BaseSkylineColor"
          >
            Gray 700
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-12xn9cs-PassTag"
          >
            <svg
              aria-hidden="true"
              class="css-5uz4ch-PassTag"
              fill="currentColor"
              height="16"
              role="img"
              style="display: inline-block; user-select: none; vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
                fill-rule="evenodd"
              />
            </svg>
            <div
              class="css-uxujil-PassTag"
            >
              Yes
            </div>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <code
              class="css-jrgdz6-BaseSkylineColor"
            >
              get-gray(700)
            </code>
          </div>
        </td>
        <td>
          <div
            class="css-6bf4yd-CopyContainer"
            style="display: inline-block;"
          >
            <div
              class="css-t4x4qw-BaseSkylineColor"
            >
              <div>
                #616161
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
